adding kams edits

--- a/about.html
+++ b/about.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
-
+	<link rel="icon" href="icon.png">
 	<title>About</title>
 	<style type="text/css">
 		p{
@@ -14,28 +13,49 @@
 		.indent{
 			margin-left: 18%;
 		}
+		.header {
+			position: fixed;
+			left: 0;
+			top: 0;
+			width: 100%;
+			text-align: left;
+			background-color: #A7E2E8;
+			color: white;
+			font-family: sans-serif;
+			font-size: 15px;
+		}
+		body {
+    font-family: Arial, Helvetica, sans-serif;
+	}
 	</style>
+	<div class="header">
+		<a href='index.html'>Home</a> &nbsp; &nbsp; About
+	</div>
 </head>
 <body>
 	<div class="writingContainer">
-		<p class='cc c0 first' >Slumber Party Giggles [<a href='https://www.urbandictionary.com/define.php?term=SPG' class='cc c1'>on Urban Dictionary</a>]</p>
-
-
-
-		<p class='cc c2 indent' >Betty: I bet he can't even do one pushup
-		<br><span class='cc c3'>Other Guy: spg! (slumber party giggles!)</span>
-		</p>
-
-
-		<p class='cc c4'>This is the website of Kameron Hansen, a writer and artist based in Manhattan.</p>
-
-		<p class='cc c5'>If you would like to purchase art or support the writing of 100 Societies:
-		<br><span class='cc c6'>paypal.me/hansen4332</span></p>
 		<br>
+	  <br>
+		<p class='cc c4'>Hi thanks for noticing my website. If you're interesting in collaborating with me, I have my email listed below.<br> I'm currently living in Utah, working on a <a href=https://scholar.google.com/citations?user=S85Dzd0AAAAJ&hl=en><span class='cc c8'>PhD in chemical physics</a> and filming <a href = https://www.youtube.com/watch?v=JvV1BBI3YG0>a movie 'Er Lin'</a>.</p>
+		<br>
+		<p><span class='cc c7'>kamrexhansen@gmail.com</span>
+		<br><a href=https://twitter.com/kam1am><span class='cc c8'>@kam1am</span></a>
+		<a href=https://www.instagram.com/naosdauf/><span class='cc c9'>@naosdauf</span></a></p>
+		<p class='cc c0 first' >About Slumber Party Giggles:<br>
+			<span class='cc c3'>
+			In high school I was tangentially involved in an effort to have spg (slumber party giggles) replace lol.<br>
+			Unfortunately, Urban Dictionary removed the acronym a few months ago. Going forward, this paragraph may <br>
+			be the only remnant of the once fervorous movment. Below was the previous entry
+			[<a href='https://www.urbandictionary.com/define.php?term=SPG' class='cc c1'>on Urban Dictionary</a>] <br>
+			(maxed out at 108 upvotes).</p></span>
+		<p class='cc c2 indent' >Betty: I bet he can't even do one pushup
+		<br>Other Guy: spg! (slumber party giggles!)</span>
+		</p>
+		<p class='cc c5'>If you would like to purchase art or support the writing of my next novel, consider <a href='https://paypal.me/hansen4332'>Paypal</a></p>
 
-		<p><span class='cc c7'>Contact: hansen4332@gmail.com</span> 
-		<br><span class='cc c8'>Twitter: @kam1am</span>
-		<br><span class='cc c9'>Instagram: @nasdofnaousd</span></p>
+
+
+
 
 
 
