--- a/artwork.html
+++ b/artwork.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+  <link rel="icon" href="icon.png">
 	<title>Slumber Party Giggles</title>
     <meta name="description" content="Kameron Hansen's Artwork and Writing">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="brains.js"></script>
 
-
+    <div class="header">
+      <a href='index.html'>Home</a> &nbsp; &nbsp; Artwork
+    </div>
 </head>
 <body>
 
-<div class="columnContainer">  
+<div class="columnContainer">
   		<div class="left">
             <h1 class='title'>ARTWORK</h1>
             <a href='gallery-one/gallery-one.html'><span class='cc c0'>Gallery 1</span><span class='year'>(2010)</span></a>
@@ -25,7 +27,7 @@
   		<div class="right">
                     <img class='doodle' src='doodles/3.jpg'>
   		</div>
-</div> 
+</div>
 
 </div>
 
