--- a/gallery-two/gallery-two.html
+++ b/gallery-two/gallery-two.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" href="icon.png">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
+	<div class="header">
+		<a href="../index.html">Home</a> &nbsp; &nbsp; Galleries
+	</div>
 </head>
 <body>
 	<div class='galleryContainer'>
 		<div class='galleryMenu'>
 			<ul>
-				<li><a href="../index.html">Home</a></li>
 				<li><a href='../gallery-one/gallery-one.html'>1</a></li>
 				<li><a class='currentGallery' href='../gallery-two/gallery-two.html'>2</a></li>
 				<li><a href='../gallery-three/gallery-three.html'>3</a></li>
