--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+  <link rel="icon" href="icon.png">
 	<title>Slumber Party Giggles</title>
     <meta name="description" content="Kameron Hansen's Artwork and Writing">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="brains.js"></script>
 
-
+<div class="header">
+  Kam Rex Hansen &nbsp;
+  <a href=https://twitter.com/kam1am>@kam1am &nbsp; </a><a href=https://www.instagram.com/naosdauf/>@naosdauf</a>
+</div>
 </head>
-<body>
 
-<div class="columnContainer">  
+<body>
+<div class="columnContainer">
   		<div class="left" >
 			<div class='mainMenu'>
+            <a class href='religion.html'>The Church of No WiFi</a>
          		<a class href='writing.html'>Writing</a>
          		<a href='artwork.html'>Artwork</a>
          		<a href='comment.html'>Please consider leaving a comment</a>
-         		<a href='subscribe.html'>Subscribe</a>
+         		<a href='about.html'>About</a>
 		  	</div>
 		</div>
   		<div class="right">
@@ -25,6 +29,14 @@
 
 
   		</div>
-</div> 
+</div>
+<div class="footer">
+<footer>
+  <p><center><font size="+3"><button type="button"><</button>
+    <a href= 'pages/page2.html'><button type="button">></button></a></font><br><font size="-1">Page 1</font></center>
+</p>
+</footer>
+</div>
+
 </body>
 </html>
