--- a/writing/book-of-enos.html
+++ b/writing/book-of-enos.html
@@ -3,14 +3,17 @@
 <head><meta charset="utf-8" />
 <title>Book of Enos</title>
 <link rel="stylesheet" type="text/css" href="writings.css" />
+<link rel="icon" href="../icon.png">
 </head>
 
     <body>
-      <div id="banner">
-        <div id='prev'><a href="snakes-on-a-plane-inside-malls-on-top-of-america.html">Previous</a></div>
-        <div id='home'><a href="../index.html">Home</a></div>
-        <div id='next'><a href="miss-me-miss-ocean-this-is-my-motion.html">Next</a></div>
-      </div>
+      <link rel="stylesheet" href="custom.css">
+        		<link rel="stylesheet" type="text/css" href="../style.css">
+        		<script src="brains.js"></script>
+          <div class="header">
+            <a href="../index.html">Home</a> &nbsp; &nbsp; <a href="../writing.html">Writing</a>&nbsp; &nbsp; The Book of Enos Chapter 2
+
+          </div>
 
       <div tabindex="-1" id="notebook" class="border-box-sizing">
         <div class="container" id="notebook-container">
@@ -20,7 +23,7 @@
     <div class="inner_cell">
     <div class="text_cell_render border-box-sizing rendered_html">
 
-    <h1 id="Book-of-Enos">The Book of Enos Chapter 33</h1>
+    <h1 id="Book-of-Enos">The Book of Enos Chapter 2</h1>
     <br />
     <br />
     <p> <b>1.  </b> &ensp; On the first day of his twenty and fifth year, Enos slept and with the doleful grasshopper he resided.</p>
