--- a/writing/jeff.html
+++ b/writing/jeff.html
@@ -3,14 +3,12 @@
 <head><meta charset="utf-8" />
 <title>Jeff</title>
 <link rel="stylesheet" type="text/css" href="writings.css" />
-
+<link rel="icon" href="../icon.png">
 </head>
 <body>
-	<div id="banner">
-		<div id='prev'><a></a></div>
-        <div id='home'><a href="../index.html">Home</a></div>
-        <div id='next'><a href="snakes-on-a-plane-inside-malls-on-top-of-america.html">Next</a></div>
-    </div>
+	<div class="header">
+		<a href="../index.html">Home</a> &nbsp; &nbsp; <a href="../writing.html">Writing</a>&nbsp; &nbsp; Jeff
+	</div>
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
