--- a/gallery-six/gallery-six.html
+++ b/gallery-six/gallery-six.html
@@ -3,12 +3,14 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
+	<div class="header">
+		<a href="../index.html">Home</a> &nbsp; &nbsp; Galleries
+	</div>
 </head>
 <body>
 	<div class='galleryContainer'>
 		<div class='galleryMenu'>
 			<ul>
-				<li><a href="../index.html">Home</a></li>
 				<li><a href='../gallery-one/gallery-one.html'>1</a></li>
 				<li><a href='../gallery-two/gallery-two.html'>2</a></li>
 				<li><a href='../gallery-three/gallery-three.html'>3</a></li>
