--- a/gallery-three/gallery-three.html
+++ b/gallery-three/gallery-three.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" href="icon.png">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<script src="brains.js"></script>
@@ -10,12 +11,14 @@
 event.target.classList.toggle('fullscreen');
 }
 </script>
+<div class="header">
+	<a href="../index.html">Home</a> &nbsp; &nbsp; Galleries
+</div>
 </head>
 <body>
 	<div class='galleryContainer'>
 		<div class='galleryMenu'>
 			<ul>
-				<li><a href="../index.html">Home</a></li>
 				<li><a href='../gallery-one/gallery-one.html'>1</a></li>
 				<li><a href='../gallery-two/gallery-two.html'>2</a></li>
 				<li><a class='currentGallery' href='../gallery-three/gallery-three.html'>3</a></li>
